--- a/styles.css
+++ b/styles.css
@@ -776,6 +776,7 @@ body.light-theme .feedback-btn span {
 
 .instructions-text {
     margin-top: 230px;
+    left: 4px;
     font-size: 14px; /* було 14px; */
     font-weight: 100; /* було 200; */
     font-family: 'Montserrat', sans-serif;
