--- a/styles.css
+++ b/styles.css
@@ -989,7 +989,10 @@ body.light-theme .result-text[data-coupons-loaded] b {
     body.in-telegram .top-buttons {
         top: calc(90px + var(--tg-safe-area-top, 0px)) !important;
     }
-    
+
+    .body-head {
+        top: 4px !important; /* було 10px; */       
+    }
     
     /* Якщо клас .in-telegram відсутній (браузер на телефоні) — явно повертаємо 10px */
     .top-buttons {
