--- a/styles.css
+++ b/styles.css
@@ -766,7 +766,8 @@ body.light-theme .feedback-btn span {
 }
 
 .iheader-text {
-    margin-top: 40px;
+    margin-top: 20px;
+    left: 50px;
     font-size: 22px;
     font-weight: 900;
     font-family: 'Montserrat', sans-serif;
