--- a/styles.css
+++ b/styles.css
@@ -565,7 +565,7 @@ body.light-theme .feedback-btn span {
 
 .instruction-img {
     position: absolute;
-    top: 5px;
+    top: 15px;
     left: 5px;
     transform: translateX(-50%);   /* саме це вирівнює центр картинки з центром контейнера */
     width: 60px;
@@ -1016,9 +1016,9 @@ body.light-theme .result-text[data-coupons-loaded] b {
     
     .instruction-img {
         position: absolute;
-        top: 5px;
-        left: 5px;
-        transform: translateX(-50%);   /* саме це вирівнює центр картинки з центром контейнера */
+        top: 15px;
+        left: 15px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера */
+           
         width: 95px; /* було top: 60px; */
         height: 95px; /* було top: 60px; */
         border-radius: 10px;
