--- a/styles.css
+++ b/styles.css
@@ -1017,11 +1017,11 @@ body.light-theme .result-text[data-coupons-loaded] b {
     .instruction-img {
         position: absolute;
         top: 15px;
-        left: 15px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера */
+        left: 35px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера */
            
         width: 95px; /* було top: 60px; */
         height: 95px; /* було top: 60px; */
-        border-radius: 10px;
+        border-radius: 50%;
         z-index: 10;                   /* щоб не перекривалися іншими елементами, якщо потрібно */
     }
 
