--- a/styles.css
+++ b/styles.css
@@ -1023,9 +1023,9 @@ body.light-theme .result-text[data-coupons-loaded] b {
       }
     
     .instruction-img {
-        position: absolute;
+        
         top: 15px;
-        left: 65px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера */
+        left: 65px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера position: absolute; */
            
         width: 95px; /* було top: 60px; */
         height: 95px; /* було top: 60px; */
