--- a/styles.css
+++ b/styles.css
@@ -1023,14 +1023,14 @@ body.light-theme .result-text[data-coupons-loaded] b {
       }
     
     .instruction-img {
-        
+        position: absolute;
         top: 15px;
-        left: 65px;  /* transform: translateX(-50%); саме це вирівнює центр картинки з центром контейнера position: absolute; */
-           
-        width: 35px; /* було top: 60px; */
-        height: 35px; /* було top: 60px; */
-        border-radius: 25%x;
-        z-index: 10;                   /* щоб не перекривалися іншими елементами, якщо потрібно */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 105px;
+        height: 105px;
+        border-radius: 50%;
+        z-index: 10;
     }
 
     .instructions-text {
