--- a/styles.css
+++ b/styles.css
@@ -864,13 +864,13 @@ body.light-theme .result-text[data-coupons-loaded] b {
     }
     
     .main-container {        
-        top: 10px; /* було top: 200px; */
+        top: 10px; !important; /* було top: 200px; */
         padding: 4px;
         width: 100%;
     } 
 
     .container {
-        top: -5px; !important;
+        top: 10px; !important;
         padding: 6px;
         width: 96%;
     }
@@ -886,7 +886,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
     .instruction-img {
         position: absolute;
         top: 5px;
-        left: 10%;
+        left: 15%;
         transform: translateX(-50%);
         width: 50px;
         height: 50px;
