--- a/styles.css
+++ b/styles.css
@@ -901,53 +901,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
         margin-top: 25px;
         font-weight: 300;
         
-    }
-    .slider:before {        
-        height: 30px;             /* було 30px */
-        bottom: 2px;        
-    }
-    .theme-toggle-container {
-        top: 98px; !important; /* було 98px */
-        right: 12px;    /* було right: 8px;  */
-        gap: 1px;
-    }
-    .theme-toggle {    
-        height: 37px;             /* було 40px height: 22px; */
-        width: 75px;              /* було 48px */
-    }
-    .theme-label {
-        font-size: 8px; /* 6px */
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 100;
-        color: #FF0000;
-    }
-    .theme-label.active {
-        font-size: 10px;
-    }
-    .theme-label:not(.active) {
-        font-size: 5px;
-    }
-    
-    .coupons-btn,
-    .instruction-btn,
-    .web-btn,
-    .feedback-btn {
-        min-width: 60px;
-        padding: 6px 4px;
-    }
-    
-    .btn-icon {
-        width: 35px; /* 32px; */
-        height: 35px;  /* 32px; */
-        margin-bottom: 4px;
-    }
-    
-    .coupons-btn span,
-    .instruction-btn span,
-    .web-btn span,
-    .feedback-btn span{
-        font-size: 8px;
-    }
+    }  
     
     
     .block-form {
@@ -960,18 +914,89 @@ body.light-theme .result-text[data-coupons-loaded] b {
         font-size: 18px;
         font-weight: 200;
     }
+    .COINS_BOT, .supercoins, .PEDRO_BOT, .COUPONS, .NIGHT_SALE, .COINS_SALE, .actions {
+      top: 42px;
+      width: 47px;
+      height: 45px;
+      position: absolute;
+      z-index: 100;
+    }
+    .COINS_BOT {
+      background: url("https://ae01.alicdn.com/kf/S286367b7e48e4544a5e5452a1bfeed18L/800x800.gif");
+      left: 77px;
+      background-size: cover;
     
+    }
+    .supercoins {
+      background: url("https://cdn4.iconfinder.com/data/icons/discount-19/64/hot_sale-sale-discount-promotion-percentage-offer-commerce-shopping-1024.png");
+      left: 142px;
+      background-size: cover;
+    }
+    .PEDRO_BOT {
+      background: url("https://cdn.icon-icons.com/icons2/1429/PNG/512/icon-robots-16_98547.png");
+      left: 142px;
+      background-size: cover;
+    }
+    .COUPONS {
+      background: url("https://cdn3.iconfinder.com/data/icons/shopping-icons-14/128/08_Sales-1024.png");
+      left: 207px;
+      background-size: cover;
+    }
+    .NIGHT_SALE {
+      background: url("https://cdn3.iconfinder.com/data/icons/weather-forecast-flat-2/2010/Flat-29-512.png");
+      left: 272px;
+      background-size: cover;
+    }
+    .COINS_SALE {
+      background: url("https://cdn3.iconfinder.com/data/icons/weather-forecast-flat-2/2010/Flat-29-512.png");
+      left: 272px;
+      background-size: cover;
+    }
+    .actions {
+      background: url("https://cdn4.iconfinder.com/data/icons/business-and-finance-colorful-free-hand-drawn-set/100/sale_1-1024.png");
+      left: 337px;
+      background-size: cover;
+    }
 
-    .fraim {
-    width: 490px;
-    height: 2580px;
+
+ .coinsbot_name, .supercoins_name, .pedrobot_name, .coupons_name, .night_name, .action_name, .coins_name {
+      top: 92px;
+      width: 45px;
+      height: 45px;
+      color: #696969;
+      position: absolute;
+      font-family: Montserrat;
+      font-weight: 500;
+      font-size: 8px;
+      opacity: 1;
+      text-align: center;
+      z-index: 10;
+      background-size: cover;
   }
-  .main_logo {
-    width: 15px;
-    height: 15px;
-  }
-     
-}
+
+      .allofcoins_name {
+        left: 79px;
+    }
+      .supercoins_name {
+        left: 144px;
+    }
+      .pedrobot_name {
+        left: 144px;
+    }
+       .coupons_name {
+        left: 209px;
+    }
+        .night_name {
+        left: 275px;
+    }
+        .coins_name {
+        left: 275px;
+    }
+        .action_name {
+        left: 339px;
+    }
+         
+    }
 
 /* Планшети (iPad Mini тощо) — (min-width: 744px) (max-width: 821px) */
 @media (min-width: 700px) and (max-width: 750px) and (orientation: portrait) {  
