--- a/styles.css
+++ b/styles.css
@@ -947,7 +947,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
     }
 
 
- .coinsbot_name, .allofcoins_name, .pedrobot_name, .coupons_name, .night_name, .action_name, .coins_name {
+ .coinsbot_name, .allofcoins_name, supercoins_name, .pedrobot_name, .coupons_name, .night_name, .action_name, .coins_name {
       top: 82px;
       width: 45px;
       height: 45px;
@@ -965,7 +965,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
       .allofcoins_name {
         left: 79px;
     }
-      .allofcoins_name {
+      .supercoins_name {
         left: 144px;
     }
       .pedrobot_name {
