--- a/styles.css
+++ b/styles.css
@@ -874,7 +874,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
     .instruction-img {
         position: absolute;
         top: 15px;
-        left: 15%;
+        left: 12%;
         transform: translateX(-50%);
         width: 50px;
         height: 50px;
@@ -947,7 +947,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
     }
 
 
- .coinsbot_name, .allofcoins_name, supercoins_name, .pedrobot_name, .coupons_name, .night_name, .action_name, .coins_name {
+ .coinsbot_name, .allofcoins_name, .supercoins_name, .pedrobot_name, .coupons_name, .night_name, .action_name, .coins_name {
       top: 82px;
       width: 45px;
       height: 45px;
