--- a/styles.css
+++ b/styles.css
@@ -902,7 +902,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
         font-size: 18px;
         font-weight: 200;
     }
-    .ALL_OF_COINS, .supercoins, .PEDRO_BOT, .COUPONS, .NIGHT_SALE, .COINS_SALE, .actions {
+    .ALL_OF_COINS, .SUPERCOINS, .PEDRO_BOT, .COUPONS, .NIGHT_SALE, .COINS_SALE, .actions {
       top: 32px;
       width: 47px;
       height: 45px;
@@ -915,7 +915,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
       background-size: cover;
     
     }
-    .supercoins {
+    .SUPERCOINS {
       background: url("https://cdn4.iconfinder.com/data/icons/discount-19/64/hot_sale-sale-discount-promotion-percentage-offer-commerce-shopping-1024.png");
       left: 142px;
       background-size: cover;
