--- a/styles.css
+++ b/styles.css
@@ -936,7 +936,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
       background-size: cover;
     }
     .COUPONS {
-      background: url("https://cdn3.iconfinder.com/data/icons/shopping-icons-14/128/08_Sales-1024.png");
+      background: url("https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png");
       left: 207px;
       background-size: cover;
     }
