--- a/styles.css
+++ b/styles.css
@@ -938,7 +938,7 @@ body.light-theme .result-text[data-coupons-loaded] b {
       background-size: cover;
     }
     .HISTORY {
-      background: url("https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/history.png");
+      background: url("https://raw.githubusercontent.com/DiscountsFromLexx/Pedro_telegram_app/main/img/aliexpress.jpg");
       left: 207px;
       background-size: cover;
     }
