--- a/styles.css
+++ b/styles.css
@@ -865,8 +865,14 @@ body.light-theme .result-text[data-coupons-loaded] b {
         margin-top: 135px; !important; /* було top: 30px; */
         padding: 4px;
         width: 98%;
+
+    .history-buttons {        
+        margin-top: 35px; !important; /* було top: 30px; */
+        padding: 4px;
+        width: 98%;
     
-    
+
+        
 
     .container {
         top: 0px; !important;
